--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     padding: 20px;
     background: 
         url('images/logo.png') repeat, /* Primer fondo: patrón de ajedrez */
-        url('/mnt/data/Decoracion.png') no-repeat; /* Segundo fondo: imagen subida */
+        url('images/Decoracion.png') no-repeat; /* Segundo fondo: imagen subida */
     background-size: 80px 80px, cover; /* Tamaño del patrón y de la imagen */
     background-position: left center, right center; /* Posiciona el patrón a la izquierda y la imagen a la derecha */
     border-radius: 5px;
